example/daemonset.yaml
#Daemonset sangat cocok digunakan untuk apps monitoring karena daemonset akan membuat pod di setiap node
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
  labels:
    test: daemonset
  annotations:
    description: Belajar daemonset
spec:
  selector:
    #matchLabels:
    #  label-key1: label-value1
    matchExpressions:
      - key: go
        operator: In
        values:
          - nginx-daemonset
  template:
    metadata:
      name: nginx-daemonset
      labels:
        go: nginx-daemonset
    spec:
      containers:
        - name: nginx 
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
