example/node-selector.yaml
# kubectl label node <namenode> key=value
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
  annotations:
    description: Belajar Node selector
spec:
  nodeSelector:
    name: "worker1"
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
