example/pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-label
  labels:
    label-key1: label-value1 #label
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
