example/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-js
  labels:
    app: node-js
  annotations:
    description: Belajar Volume
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
    - name: node-js
      image: khannedy/nodejs-writer
      volumeMounts:
        - mountPath: /app/html
          name: html
