example/configmaps.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodejs-configmap-service
spec:
  type: NodePort
  selector:
    name: nodejs-configmap
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
