example/endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-nginx
  labels:
    run: nginx
spec:
  ports:
    - port: 80

---

apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-nginx
  labels:
    run: nginx
subsets:
  - addresses:
      - ip: 11.11.11.11
      - ip: 22.22.22.22
    ports:
      - port: 80
