example/volume-sharing.yaml

apiVersion: v1
kind: Service
metadata:
  name: sharing-volume-service
spec:
  type: NodePort
  selector:
    name: sharing-volume
  ports:
    - port: 8080
      targertPort: 80
      nodePort: 30002
