example/service-ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
  annotations:
    description: Belajar Ingress
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
  ports:
  - port: 80
    targertPort: 80
    
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx
spec:
  rules:
    - host: guntur.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 80
